load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "attestation_logger.go",
         "log.go",
    ],
    importpath = "github.com/prysmaticlabs/prysm/v5/beacon-chain/logging",
    visibility = ["//beacon-chain:__subpackages__"],
    deps = [
        "//monitoring/tracing/trace:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "//consensus-types/primitives:go_default_library",
        "//time/slots:go_default_library",
        "//beacon-chain/core/helpers:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "attestation_logger_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
